--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 // colorscheme(dracula)
 // See https://github.com/dracula/dracula-theme/blob/master/LICENSE or dracula/LICENSE for the license
-$bg: #282a36;
-$fg: #f8f8f2;
+$bg: #000000;
+$fg: #ffffff;
 $inactive: #44475a;
 $darkblue: #6272a4;
 $cyan: #8be9fd;
